; ModuleID = '/home/carl/AnghaBench/netdata/collectors/proc.plugin/extr_proc_self_mountinfo.c_mountinfo_free_all.c'
source_filename = "/home/carl/AnghaBench/netdata/collectors/proc.plugin/extr_proc_self_mountinfo.c_mountinfo_free_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mountinfo = type { %struct.mountinfo* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mountinfo_free_all(%struct.mountinfo* %0) #0 {
  %2 = alloca %struct.mountinfo*, align 8
  %3 = alloca %struct.mountinfo*, align 8
  store %struct.mountinfo* %0, %struct.mountinfo** %2, align 8
  br label %4

4:                                                ; preds = %7, %1
  %5 = load %struct.mountinfo*, %struct.mountinfo** %2, align 8
  %6 = icmp ne %struct.mountinfo* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %4
  %8 = load %struct.mountinfo*, %struct.mountinfo** %2, align 8
  store %struct.mountinfo* %8, %struct.mountinfo** %3, align 8
  %9 = load %struct.mountinfo*, %struct.mountinfo** %2, align 8
  %10 = getelementptr inbounds %struct.mountinfo, %struct.mountinfo* %9, i32 0, i32 0
  %11 = load %struct.mountinfo*, %struct.mountinfo** %10, align 8
  store %struct.mountinfo* %11, %struct.mountinfo** %2, align 8
  %12 = load %struct.mountinfo*, %struct.mountinfo** %3, align 8
  %13 = call i32 @mountinfo_free(%struct.mountinfo* %12)
  br label %4

14:                                               ; preds = %4
  ret void
}

declare dso_local i32 @mountinfo_free(%struct.mountinfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
